--- a/apps/angularapp/src/app/app.component.html
+++ b/apps/angularapp/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h3>I'm in angular</h3>
-<hr/>
-<angularapp-server></angularapp-server>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I'm in angular</h3>
+      <hr/>
+      <!-- <angularapp-servers></angularapp-servers> -->
+      <!-- <div angularapp-servers></div> -->
+      <div class="angularapp-servers"></div>
+    </div>
+  </div>
+</div>
