--- a/apps/angularapp/src/app/servers/servers.component.html
+++ b/apps/angularapp/src/app/servers/servers.component.html
@@ -1,2 +1,4 @@
+
+<button class="btn btn-primary" [disabled]="!allowNewServer">Click Me!</button>
 <angularapp-server></angularapp-server>
 <angularapp-server></angularapp-server>
