--- a/apps/angularapp/src/app/servers/servers.component.html
+++ b/apps/angularapp/src/app/servers/servers.component.html
@@ -1,4 +1,5 @@
 
 <button class="btn btn-primary" [disabled]="!allowNewServer">Click Me!</button>
+<p [innerText]="allowNewServer"></p>
 <angularapp-server></angularapp-server>
 <angularapp-server></angularapp-server>
