--- a/apps/angularapp/src/app/servers/servers.component.html
+++ b/apps/angularapp/src/app/servers/servers.component.html
@@ -1,5 +1,3 @@
 
-<button class="btn btn-primary" [disabled]="!allowNewServer">Click Me!</button>
-<p [innerText]="allowNewServer"></p>
-<angularapp-server></angularapp-server>
-<angularapp-server></angularapp-server>
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Click Me!</button>
+<p>{{serverCreationStatus}}</p>
