--- a/apps/angularapp/src/app/servers/servers.component.html
+++ b/apps/angularapp/src/app/servers/servers.component.html
@@ -1,3 +1,6 @@
 
+<label>Server Name</label>
+<input type="text" class="form-control" (input)="onUpdateServerName($event)"/>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Click Me!</button>
+<p>{{serverName}}</p>
 <p>{{serverCreationStatus}}</p>
