--- a/apps/angularapp/src/app/servers/servers.component.html
+++ b/apps/angularapp/src/app/servers/servers.component.html
@@ -2,4 +2,4 @@
 <label>Server Name</label>
 <input type="text" class="form-control" [(ngModel)]="serverName"/>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Click Me!</button>
-<p>{{serverCreationStatus}}</p>
+<p *ngIf="severCreated">Server was created: {{serverName}}</p>
