--- a/apps/angularapp/src/app/server/server.component.html
+++ b/apps/angularapp/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server with ID {{serverId}} is {{getServerStatus()}} </p>
+<p [ngClass]="{active: getServerStatus()==='offline'}">Server with ID {{serverId}} is {{getServerStatus()}} </p>
