--- a/apps/angularapp/src/app/app.component.html
+++ b/apps/angularapp/src/app/app.component.html
@@ -1,11 +1,9 @@
+<angularapp-header></angularapp-header>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h3>I'm in angular</h3>
-      <hr/>
-      <!-- <angularapp-servers></angularapp-servers> -->
-      <!-- <div angularapp-servers></div> -->
-      <div class="angularapp-servers"></div>
+    <div class="col-md-12">
+      <angularapp-recipes></angularapp-recipes>
+      <angularapp-shopping-list></angularapp-shopping-list>
     </div>
   </div>
 </div>
